# mpdcli

./: Cargo.toml  LICENSE  README.md
src/: app.rs  error.rs  main.rs  mpd.rs  player.rs  remote.rs
src/app/: connected.rs  player.rs  progress.rs  queue.rs  song_info.rs
src/mpd/: mpd_ctrl.rs  mpd_events.rs  mpd_listen.rs
