[package]
name = "mpdcli"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = "1.42"
iced = { path = "/home/phlay/sw/src/rust/ui/iced", features = ["image", "svg", "tokio"] }
mpd_client = "1.4"
futures-channel = "0.3.30"
bytes = "1.5"
