[package]
name = "mpdcli"
version = "0.1.0"
edition = "2021"
licence = "MIT"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = "1"
iced = { version = "0.13", features = ["image", "svg", "tokio"] }
mpd_client = "1.4"
futures-channel = "0.3"
bytes = "1.5"
lazy_static = "1.5"

[profile.release-lto]
inherits = "release"
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
